[tool.poetry]
name = "ResilienceAssessmentJD"
version = "1.1.0"
description = "Resilience assessment model developed by Wenjie Xu."
authors = ["Wenjie Xu <wenjie.xu.cn@outlook.com>"]
maintainers = [
    "Wenjie Xu <wenjie.xu.cn@outlook.com>",
]
readme = "README.md"
license = "Apache-2.0"
keywords = ["Resilience", "Assessment"]
packages = [
    { include = "ResilienceAssessmentJD" },
]
include = ["pyproject.toml", "README.md", "LICENSE"]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
coverage = "^7.6.1"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
mypy = "^1.11.1"
gitchangelog = "^3.0.4"
mkdocs = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ResilienceAssessmentJD = 'ResilienceAssessmentJD.__main__:main'
